--- a/p8105_hw6_aa4517.Rmd
+++ b/p8105_hw6_aa4517.Rmd
@@ -25,3 +25,80 @@ scale_colour_discrete = scale_colour_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
 set.seed(1)
 ```
+
+
+##Problem 1 
+
+```{r create dataset_1,  message = FALSE, warning = FALSE}
+homicide_df = 
+  read_csv("data/homicide-data.csv", na = c("", "NA", "Unknown")) %>% 
+    mutate(
+        city_state = str_c(city, state, sep = "_"),
+        victim_age = as.numeric(victim_age),
+        resolution = case_when(
+        disposition == "Closed without arrest" ~ 0,
+        disposition == "Open/No arrest"        ~ 0,
+        disposition == "Closed by arrest"      ~ 1,
+      )
+    ) %>% 
+  filter(
+    !city_state %in% c("Tulsa_AL", "Dallas_TX", "Phoenix_AZ", "Kansas City_MO"),
+    victim_race %in% c("Black", "White")    
+    ) %>% 
+  select(city_state, resolution, victim_age, victim_race, victim_sex)
+```
+
+Start with one city 
+
+```{r regress_1}
+baltimore_df = 
+  homicide_df %>% 
+  filter(city_state == "Baltimore_MD")
+glm(resolution ~ victim_age + victim_race + victim_sex, 
+    data = baltimore_df,
+    family = binomial()) %>% 
+  broom::tidy() %>% 
+  mutate(
+    OR = exp(estimate),
+    CI_lower = exp(estimate - 1.96 * std.error),
+    CI_upper = exp(estimate + 1.96 * std.error)
+  ) %>% 
+  select(term, OR, starts_with("CI")) %>% 
+  knitr::kable(digits = 3)
+```
+
+Do it for every city in the dataset.
+First nest the dataset and then fit the dataset for each city.
+
+```{r simulate_1}
+models_results_df =
+homicide_df %>%
+  nest(data = -city_state) %>% 
+  mutate(
+    models = map(.x = data, ~glm(resolution ~ victim_age + victim_race + victim_sex, data = .x,
+                                family = binomial())),
+    results = map(models, broom::tidy)
+  ) %>% 
+  select(city_state, results) %>% 
+  unnest(results) %>% 
+  mutate(
+    OR = exp(estimate),
+    CI_lower = exp(estimate - 1.96 * std.error),
+    CI_upper = exp(estimate + 1.96 * std.error)
+  ) %>% 
+  select(city_state, term, OR, starts_with("CI"))
+```
+
+### Make a plot of the ORs
+
+In each of these 50 cities are male homicide victims more or less likely to have homicide resoled by arrest compared to female victims
+
+```{r plot_1}
+models_results_df %>% 
+  filter(term == "victim_sexMale") %>% 
+  mutate(city_state = fct_reorder(city_state, OR)) %>% 
+  ggplot(aes(x = city_state, y = OR)) + 
+  geom_point() + 
+  geom_errorbar(aes(ymin = CI_lower, ymax = CI_upper)) + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
