--- a/p8105_hw6_aa4517.md
+++ b/p8105_hw6_aa4517.md
@@ -1,35 +1,9 @@
----
-title: "Homework 6"
-output: github_document
----
+Homework 6
+================
 
-```{r setup, echo = FALSE, message = FALSE, warning = FALSE}
-library(tidyverse)
-library(p8105.datasets)
-library(readr)
-library(purrr)
-library(modelr)
-library(mgcv)
-library(ggplot2)
-knitr::opts_chunk$set(
-  fig.width = 6,
-  fig.asp = 0.6,
-  out.width = "90%"
-)
-theme_set(theme_minimal() + theme(legend.position = "bottom"))
-options(
-  ggplot2.continuous.colour = "viridis",
-  ggplot2.continuous.fill = "viridis"
-)
-scale_colour_discrete = scale_colour_viridis_d
-scale_fill_discrete = scale_fill_viridis_d
-set.seed(1)
-```
+\#\#Problem 1
 
-
-##Problem 1 
-
-```{r create dataset_1,  message = FALSE, warning = FALSE}
+``` r
 homicide_df = 
   read_csv("data/homicide-data.csv", na = c("", "NA", "Unknown")) %>% 
     mutate(
@@ -48,9 +22,9 @@ homicide_df =
   select(city_state, resolution, victim_age, victim_race, victim_sex)
 ```
 
-Start with one city 
+Start with one city
 
-```{r regress_1}
+``` r
 baltimore_df = 
   homicide_df %>% 
   filter(city_state == "Baltimore_MD")
@@ -67,10 +41,17 @@ glm(resolution ~ victim_age + victim_race + victim_sex,
   knitr::kable(digits = 3)
 ```
 
-Do it for every city in the dataset.
-First nest the dataset and then fit the dataset for each city.
+| term              |    OR | CI\_lower | CI\_upper |
+| :---------------- | ----: | --------: | --------: |
+| (Intercept)       | 1.363 |     0.975 |     1.907 |
+| victim\_age       | 0.993 |     0.987 |     1.000 |
+| victim\_raceWhite | 2.320 |     1.648 |     3.268 |
+| victim\_sexMale   | 0.426 |     0.325 |     0.558 |
 
-```{r simulate_1}
+Do it for every city in the dataset. First nest the dataset and then fit
+the dataset for each city.
+
+``` r
 models_results_df =
 homicide_df %>%
   nest(data = -city_state) %>% 
@@ -91,9 +72,10 @@ homicide_df %>%
 
 ### Make a plot of the ORs
 
-In each of these 50 cities are male homicide victims more or less likely to have homicide resoled by arrest compared to female victims
+In each of these 50 cities are male homicide victims more or less likely
+to have homicide resoled by arrest compared to female victims
 
-```{r plot_1}
+``` r
 models_results_df %>% 
   filter(term == "victim_sexMale") %>% 
   mutate(city_state = fct_reorder(city_state, OR)) %>% 
@@ -103,10 +85,13 @@ models_results_df %>%
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
-## Problem 2 
+<img src="p8105_hw6_aa4517_files/figure-gfm/plot_1-1.png" width="90%" />
+
+## Problem 2
+
 Read in the data
 
-```{r import_tidy_baby, message = FALSE}
+``` r
 baby_df = 
   read_csv("./data/birthweight.csv") %>% 
   mutate(
@@ -126,18 +111,23 @@ baby_df =
 
 #### Fit the models
 
-We will compare three models: a crude model(m1) with just length and gestational weeks; an interactions model(m2) with head circumference, length, sex, and all interactions (including 3-way); and a full model(m3), that includes head circumference, length, sex, mother's race, family income, presence of malformations, and the interaction of mother's pre-pregnancy weight and her gestational weight. 
+We will compare three models: a crude model(m1) with just length and
+gestational weeks; an interactions model(m2) with head circumference,
+length, sex, and all interactions (including 3-way); and a full
+model(m3), that includes head circumference, length, sex, mother’s race,
+family income, presence of malformations, and the interaction of
+mother’s pre-pregnancy weight and her gestational weight.
 
-```{r models, message = FALSE}
+``` r
 model_m1 = lm(bwt ~ blength + gaweeks, data = baby_df)
 model_m2 = lm(bwt ~ bhead * blength * babysex, data = baby_df)
 model_m3 = lm(bwt ~ bhead + blength + babysex + mrace + fincome + malform + delwt * ppwt, 
                 data = baby_df)
 ```
 
-We will now create the residuals and predicted values for each model. 
+We will now create the residuals and predicted values for each model.
 
-```{r resid, message = FALSE}
+``` r
 m1_df = 
   baby_df %>% 
   modelr::add_residuals(model_m1) %>% 
@@ -155,7 +145,7 @@ m3_df =
 
 Plotting the residuals and predicted values for each model.
 
-```{r resid_plots, message = FALSE}
+``` r
 m1_resid_plot = 
   m1_df %>% 
   ggplot(aes(x = resid, y = pred)) +
@@ -190,15 +180,29 @@ m3_resid_plot =
     y = "Predicted values"
   )
 m1_resid_plot
+```
+
+<img src="p8105_hw6_aa4517_files/figure-gfm/resid_plots-1.png" width="90%" />
+
+``` r
 m2_resid_plot
+```
+
+<img src="p8105_hw6_aa4517_files/figure-gfm/resid_plots-2.png" width="90%" />
+
+``` r
 m3_resid_plot
 ```
 
-The interaction and full models are very similar, the crude model has much larger residuals and predicted values. Thus, the crude model is likely a poorer fit for the data.
+<img src="p8105_hw6_aa4517_files/figure-gfm/resid_plots-3.png" width="90%" />
 
-We will do soe cross-validation now to understand more- 
+The interaction and full models are very similar, the crude model has
+much larger residuals and predicted values. Thus, the crude model is
+likely a poorer fit for the data.
 
-```{r cv, message = FALSE}
+We will do soe cross-validation now to understand more-
+
+``` r
 cv_df =
   crossv_mc(baby_df, 100) %>% 
   mutate(
@@ -227,15 +231,16 @@ cv_plot =
 cv_plot
 ```
 
-The full model(model 3) will be the best fir for data because it has the lowest root mean squared error (rmse).
+<img src="p8105_hw6_aa4517_files/figure-gfm/cv-1.png" width="90%" />
 
-
+The full model(model 3) will be the best fir for data because it has the
+lowest root mean squared error (rmse).
 
 ## Problem 3
 
 Read in the data
 
-```{r, message = FALSE, warning = FALSE}
+``` r
 weather_df = 
   rnoaa::meteo_pull_monitors(
     c("USW00094728"),
@@ -249,4 +254,5 @@ weather_df =
   select(name, id, everything())
 ```
 
-The dataset for this problem has `r weather_df %>% nrow()` rows. The variables in this dataset are: `r weather_df %>% ls()`.
+The dataset for this problem has 365 rows. The variables in this dataset
+are: date, id, name, prcp, tmax, tmin.
